// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReaderDetail > matches snapshot (no active item) 1`] = `"<!--v-if-->"`;

exports[`ReaderDetail > matches snapshot (with active article) 1`] = `
"<div class="detail-scrim">
  <div class="detail-sheet">
    <div class="detail-head">
      <source-tag-stub item="[object Object]"></source-tag-stub>
      <div class="ml-auto flex items-center gap-0.5"><button class="icon-btn" title="Previous (←)">
          <r-icon-stub name="chevRight" size="16" style="transform: rotate(180deg);"></r-icon-stub>
        </button><button class="icon-btn" title="Next (→)">
          <r-icon-stub name="chevRight" size="16"></r-icon-stub>
        </button><span class="bg-border mx-1 h-5 w-px"></span><button class="icon-btn" title="Save for later">
          <r-icon-stub name="bookmark" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Open original">
          <r-icon-stub name="external" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Close (esc)">
          <r-icon-stub name="x" size="18"></r-icon-stub>
        </button></div>
    </div>
    <div class="detail-body">
      <!-- loading shimmer -->
      <!-- ARTICLE -->
      <article class="p-7 sm:p-9">
        <div class="mb-4 flex flex-wrap items-center gap-2"><span class="chip">#design</span><span class="chip">#web</span></div>
        <h1 class="detail-title mb-4">Test Article Title</h1>
        <div class="text-muted mb-7 pb-7 text-[12.5px]" style="border-bottom-width: var(--border); border-bottom-style: var(--border); border-bottom-color: var(--border);">Test Source · 2h ago </div>
        <detail-prose-stub paragraphs="First paragraph.,Second paragraph." emptytext="No article text was included in this feed. Open the original to read the full piece." sanitizedhtml=""></detail-prose-stub><a href="https://test.example.com/article-1" target="_blank" rel="noopener noreferrer" class="btn mt-8">
          <r-icon-stub name="external" size="15"></r-icon-stub> Open original
        </a>
      </article>
    </div>
  </div>
</div>"
`;

exports[`ReaderDetail > matches snapshot (with active podcast) 1`] = `
"<div class="detail-scrim">
  <div class="detail-sheet">
    <div class="detail-head">
      <source-tag-stub item="[object Object]"></source-tag-stub>
      <div class="ml-auto flex items-center gap-0.5"><button class="icon-btn" title="Previous (←)">
          <r-icon-stub name="chevRight" size="16" style="transform: rotate(180deg);"></r-icon-stub>
        </button><button class="icon-btn" title="Next (→)">
          <r-icon-stub name="chevRight" size="16"></r-icon-stub>
        </button><span class="bg-border mx-1 h-5 w-px"></span><button class="icon-btn" title="Save for later">
          <r-icon-stub name="bookmark" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Open original">
          <r-icon-stub name="external" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Close (esc)">
          <r-icon-stub name="x" size="18"></r-icon-stub>
        </button></div>
    </div>
    <div class="detail-body">
      <!-- loading shimmer -->
      <!-- ARTICLE -->
      <!-- PODCAST -->
      <div class="p-7 sm:p-8">
        <div class="mb-6 flex gap-4">
          <div class="ph ratio-1x1" data-label="cover" style="width: 96px; height: 96px; color: var(--src-podcast); flex-grow: 0; flex-shrink: 0; flex-basis: auto;">
            <r-icon-stub name="mic" size="24"></r-icon-stub>
          </div>
          <div class="min-w-0 self-center">
            <div class="text-muted mb-1.5 text-[12px]">Test Podcast</div>
            <h2 class="detail-title" style="font-size: 20px;">Test Episode Title</h2>
          </div>
        </div>
        <div class="mb-7 rounded-sm p-4" style="background: var(--surface-2);">
          <div class="mb-3 flex items-center gap-3"><button class="pod-play" style="width: 44px; height: 44px;" title="Play episode">
              <r-icon-stub name="play" size="18"></r-icon-stub>
            </button>
            <div class="flex-1">
              <div class="scrubber"><i style="width: 0%;"></i></div>
            </div>
          </div>
          <div class="text-muted flex items-center justify-between text-[11px]"><span>0:00</span>
            <div class="flex gap-1.5"><span class="kbd">1.0×</span><button type="button" class="kbd" disabled=""> +15s </button></div><span>45:00</span>
          </div>
        </div>
        <div class="text-faint mb-3 text-[10px] tracking-[.14em] uppercase"> Show notes </div>
        <detail-prose-stub paragraphs="Show note one.,Show note two." emptytext="No show notes were included for this episode." sanitizedhtml=""></detail-prose-stub>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ReaderDetail > matches snapshot (with active tweet) 1`] = `
"<div class="detail-scrim">
  <div class="detail-sheet">
    <div class="detail-head">
      <source-tag-stub item="[object Object]"></source-tag-stub>
      <div class="ml-auto flex items-center gap-0.5"><button class="icon-btn" title="Previous (←)">
          <r-icon-stub name="chevRight" size="16" style="transform: rotate(180deg);"></r-icon-stub>
        </button><button class="icon-btn" title="Next (→)">
          <r-icon-stub name="chevRight" size="16"></r-icon-stub>
        </button><span class="bg-border mx-1 h-5 w-px"></span><button class="icon-btn" title="Save for later">
          <r-icon-stub name="bookmark" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Open original">
          <r-icon-stub name="external" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Close (esc)">
          <r-icon-stub name="x" size="18"></r-icon-stub>
        </button></div>
    </div>
    <div class="detail-body">
      <!-- loading shimmer -->
      <!-- ARTICLE -->
      <!-- TWEET -->
      <div class="p-7 sm:p-8">
        <div class="mb-5 flex items-center gap-3"><span class="avatar src-tweet" style="width: 48px; height: 48px; font-size: 16px;">TU</span>
          <div class="min-w-0"><b class="text-ink block text-[15px] font-semibold">Test User</b><span class="text-muted text-[13px]">@testuser</span></div><span class="src-tweet ml-auto"><r-icon-stub name="chat" size="20"></r-icon-stub></span>
        </div>
        <p class="detail-tweet mb-5">This is a test tweet body text.</p>
        <div class="text-muted text-[12px]">3h ago</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`ReaderDetail > matches snapshot (with active video) 1`] = `
"<div class="detail-scrim">
  <div class="detail-sheet">
    <div class="detail-head">
      <source-tag-stub item="[object Object]"></source-tag-stub>
      <div class="ml-auto flex items-center gap-0.5"><button class="icon-btn" title="Previous (←)">
          <r-icon-stub name="chevRight" size="16" style="transform: rotate(180deg);"></r-icon-stub>
        </button><button class="icon-btn" title="Next (→)">
          <r-icon-stub name="chevRight" size="16"></r-icon-stub>
        </button><span class="bg-border mx-1 h-5 w-px"></span><button class="icon-btn" title="Save for later">
          <r-icon-stub name="bookmark" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Open original">
          <r-icon-stub name="external" size="16"></r-icon-stub>
        </button><button class="icon-btn" title="Close (esc)">
          <r-icon-stub name="x" size="18"></r-icon-stub>
        </button></div>
    </div>
    <div class="detail-body">
      <!-- loading shimmer -->
      <!-- ARTICLE -->
      <!-- VIDEO -->
      <div>
        <div class="thumb ratio-16x9" style="border-radius: 0px;"><img class="thumb-img" src="https://example.com/thumb.jpg" alt="" loading="lazy" referrerpolicy="no-referrer"><span class="thumb-play" style="width: 64px; height: 64px;"><r-icon-stub name="play" size="28"></r-icon-stub></span><span class="thumb-dur">12:34</span></div>
        <div class="p-7 sm:p-8">
          <h2 class="detail-title mb-3" style="font-size: 22px;">Test Video Title</h2>
          <div class="text-muted mb-6 flex flex-wrap items-center gap-2.5 pb-6 text-[12.5px]" style="border-bottom-width: var(--border); border-bottom-style: var(--border); border-bottom-color: var(--border);"><span class="src-ic src-video" style="--c: var(--src-video);"><r-icon-stub name="video" size="13"></r-icon-stub></span><b class="text-ink-2 font-medium">Test Channel</b><span>·</span><span>12:34</span></div>
          <detail-prose-stub paragraphs="Full video description here." emptytext="No description was included for this video." sanitizedhtml=""></detail-prose-stub><a href="https://www.youtube.com/watch?v=test123" target="_blank" rel="noopener noreferrer" class="btn btn-primary mt-7">
            <r-icon-stub name="play" size="15"></r-icon-stub> Watch on YouTube
          </a>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
